Reduce synchronized blocks to improve concurrency (#132)
* Reduce synchronized blocks to improve concurrency

* Replace volatile with assignment to field during object creation

* Simplify concurrent access to state maps